# agent-chassis

./: .gitignore  README.md  install.sh  pyproject.toml
chassis/: __main__.py  config.py  doctor.py  embedder.py  loader.py  matcher.py  models.py  selector.py  session.py
chassis/mcp/: handlers.py  server.py
docs/superpowers/plans/: 2026-05-26-chassis-plan-1-core.md  2026-05-26-chassis-plan-2-hooks.md  2026-05-26-chassis-plan-3-mcp.md  2026-05-26-chassis-plan-4-bootstrap.md
docs/superpowers/specs/: 2026-05-26-chassis-design.md
hooks/: chassis-hook.sh  register-claude-code.sh  register-claude-desktop.sh  register-opencode.sh
tests/: conftest.py  test_cli.py  test_config.py  test_doctor.py  test_embedder.py  test_loader.py  test_matcher.py  test_models.py  test_selector.py  test_session.py
tests/hooks/: test_hook.sh
tests/test_mcp/: test_handlers.py
