[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chassis"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
embeddings = [
    "fastembed>=0.3",
    "numpy>=1.24",
]

[project.scripts]
chassis = "chassis.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
